--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "lowdb": "^6.0.1",
     "mongoose": "^7.3.1",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2",
+    "socketio-jwt-auth": "^0.2.1",
     "telegraf": "^4.12.2"
   }
 }
