--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 BOT_TOKEN='5986400520:AAHd61GLW0C2TXQpSAtS4FSVkNvPWGn0MM0'
+DB_URL='mongodb+srv://root:root@cluster0.kc0ptcm.mongodb.net/?retryWrites=true&w=majority'
