--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 BOT_TOKEN='5986400520:AAHd61GLW0C2TXQpSAtS4FSVkNvPWGn0MM0'
 DB_URL='mongodb+srv://root:root@cluster0.kc0ptcm.mongodb.net/?retryWrites=true&w=majority'
+API_TOKEN='2a801658-2361-4eb7-b754-2002af2d8c38'
+OFFICE_TOKEN='JHdjkwhuj2hUKJ@H3uh2uoihfduiah!'
