--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2",
     "socketio-jwt-auth": "^0.2.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "uws": "^200.0.0"
   }
 }
