--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^6.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.22",
