--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^6.0.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.3.1",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.22",
